--- a/html/_default.html
+++ b/html/_default.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,66 +18,72 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">component-title</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">component title</h1>
 
-            <div class="component-description">
-                component-description
+            <div class="docs-component__description">
+                component description
                 <code>.class</code>
                 <code>.class</code>
             </div>
 
-            <div class="component-preview">
-                component-preview
+            <div class="docs-component__preview">
+                component preview
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                 component-code
-            </script></div>
+            <div class="docs-component__code">
+                <div class="language-markup"><script type="text/plain">
+                    component code
+                </script></div>
+            </div>
     </section>
 
 
 
 
-    <section class="component-section">
-        <h1 class="component-title">component-title</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">component title</h1>
 
 
-        <h2 class="component-title">component-title secondary</h2>
+        <h2 class="docs-component__title">component title secondary</h2>
 
-            <div class="component-description">
-                component-description
+            <div class="docs-component__description">
+                component description
             </div>
 
-            <div class="component-preview">
-                component-preview
+            <div class="docs-component__preview">
+                component preview
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                component-code
-            </script></div>
-
-
-
-
-        <h2 class="component-title">component-title secondary</h2>
-
-            <div class="component-description">
-                component-description
+            <div class="docs-component__code">
+                <div class="language-markup"><script type="text/plain">
+                    component code
+                </script></div>
             </div>
 
-            <div class="component-preview">
-                component-preview
+
+
+
+        <h2 class="docs-component__title">component title secondary</h2>
+
+            <div class="docs-component__description">
+                component description
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                component-code
-            </script></div>
+            <div class="docs-component__preview">
+                component preview
+            </div>
+
+            <div class="docs-component__code">
+                <div class="language-markup"><script type="text/plain">
+                    component code
+                </script></div>
+            </div>
     </section>
 
 
@@ -90,8 +93,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
