--- a/html/button.html
+++ b/html/button.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,17 +18,17 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component__wrapper">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">button</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">button</h1>
 
-        <h2 class="component-title">button tag</h2>
+        <h2 class="docs-component__title">button tag</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <a href="javascript:void(0);" class="btn"><span class="btn-text">anchor</span></a>
                 <button type="button" class="btn"><span class="btn-text">button</span></button>
                 <input type="button" class="btn" value="input">
@@ -39,7 +36,7 @@
                 <input type="reset" class="btn" value="reset">
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <a href="javascript:void(0);" class="btn"><span class="btn-text">anchor</span></a>
                 <button type="button" class="btn"><span class="btn-text">button</span></button>
                 <input type="button" class="btn" value="input">
@@ -50,17 +47,17 @@
 
 
 
-        <h2 class="component-title">button disabled</h2>
+        <h2 class="docs-component__title">button disabled</h2>
 
-            <div class="component-preview">
-                <a href="javascript:void(0);" class="btn disabled"><span class="btn-text">anchor</span></a>
+            <div class="docs-component__preview">
+                <a href="javascript:void(0);" class="btn is-disabled"><span class="btn-text">anchor</span></a>
                 <button type="button" class="btn" disabled><span class="btn-text">button</span></button>
                 <input type="button" class="btn" value="input" disabled>
                 <input type="submit" class="btn" value="submit" disabled>
                 <input type="reset" class="btn" value="reset" disabled>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <a href="javascript:void(0);" class="btn disabled"><span class="btn-text">anchor</span></a>
                 <button type="button" class="btn" disabled><span class="btn-text">button</span></button>
                 <input type="button" class="btn" value="input" disabled>
@@ -71,15 +68,15 @@
 
 
 
-        <h2 class="component-title">button type</h2>
+        <h2 class="docs-component__title">button type</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <button type="button" class="btn"><span class="btn-text">default</span></button>
                 <button type="button" class="btn btn-primary"><span class="btn-text">primary</span></button>
                 <button type="button" class="btn btn-secondary"><span class="btn-text">secondary</span></button>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <button type="button" class="btn"><span class="btn-text">default</span></button>
                 <button type="button" class="btn btn-primary"><span class="btn-text">primary</span></button>
                 <button type="button" class="btn btn-secondary"><span class="btn-text">secondary</span></button>
@@ -88,9 +85,9 @@
 
 
 
-        <h2 class="component-title">button color</h2>
+        <h2 class="docs-component__title">button color</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <button type="button" class="btn btn-gray"><span class="btn-text">gray</span></button>
                 <button type="button" class="btn btn-dark"><span class="btn-text">dark</span></button>
                 <button type="button" class="btn btn-green"><span class="btn-text">green</span></button>
@@ -99,7 +96,7 @@
                 <button type="button" class="btn btn-white"><span class="btn-text">white</span></button>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <button type="button" class="btn btn-gray"><span class="btn-text">gray</span></button>
                 <button type="button" class="btn btn-dark"><span class="btn-text">dark</span></button>
                 <button type="button" class="btn btn-green"><span class="btn-text">green</span></button>
@@ -111,9 +108,9 @@
 
 
 
-        <h2 class="component-title">button size</h2>
+        <h2 class="docs-component__title">button size</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <button type="button" class="btn btn-xsmall"><span class="btn-text">xsmall</span></button>
                 <button type="button" class="btn btn-small"><span class="btn-text">small</span></button>
                 <button type="button" class="btn"><span class="btn-text">medium</span></button>
@@ -121,7 +118,7 @@
                 <button type="button" class="btn btn-xlarge"><span class="btn-text">xlarge</span></button>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <button type="button" class="btn btn-xsmall"><span class="btn-text">xsmall</span></button>
                 <button type="button" class="btn btn-small"><span class="btn-text">small</span></button>
                 <button type="button" class="btn"><span class="btn-text">medium</span></button>
@@ -132,9 +129,9 @@
 
 
 
-        <h2 class="component-title">button round</h2>
+        <h2 class="docs-component__title">button round</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <button type="button" class="btn btn-round"><span class="btn-text">default</span></button>
                 <button type="button" class="btn btn-primary btn-round"><span class="btn-text">primary</span></button>
                 <button type="button" class="btn btn-secondary btn-round"><span class="btn-text">secondary</span></button>
@@ -145,7 +142,7 @@
                 <button type="button" class="btn btn-xlarge btn-round"><span class="btn-text">xlarge</span></button>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <button type="button" class="btn btn-round"><span class="btn-text">default</span></button>
                 <button type="button" class="btn btn-primary btn-round"><span class="btn-text">primary</span></button>
                 <button type="button" class="btn btn-secondary btn-round"><span class="btn-text">secondary</span></button>
@@ -159,14 +156,14 @@
 
 
 
-        <h2 class="component-title">button icon + text</h2>
+        <h2 class="docs-component__title">button icon + text</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <button type="button" class="btn"><i class="iconset icon-checked" aria-hidden="true"></i><span class="btn-text">button</span></button>
                 <button type="button" class="btn"><span class="btn-text">button</span><i class="iconset icon-close" aria-hidden="true"></i></button>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <button type="button" class="btn"><i class="iconset icon-checked" aria-hidden="true"></i><span class="btn-text">button</span></button>
                 <button type="button" class="btn"><span class="btn-text">button</span><i class="iconset icon-close" aria-hidden="true"></i></button>
             </script></div>
@@ -174,14 +171,14 @@
 
 
 
-        <h2 class="component-title">button icon</h2>
+        <h2 class="docs-component__title">button icon</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <button type="button" class="btn btnicon"><i class="iconset icon-heart" aria-hidden="true"></i><span class="btn-text">button</span></button>
                 <button type="button" class="btn btnicon"><i class="iconset icon-close" aria-hidden="true"></i><span class="btn-text">button</span></button>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <button type="button" class="btn btnicon"><i class="iconset icon-heart" aria-hidden="true"></i><span class="btn-text">button</span></button>
                 <button type="button" class="btn btnicon"><i class="iconset icon-close" aria-hidden="true"></i><span class="btn-text">button</span></button>
             </script></div>
@@ -194,8 +191,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
