--- a/html/icon.html
+++ b/html/icon.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,15 +18,15 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component__wrapper">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">icon</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">icon</h1>
 
-        <div class="component-preview" style="padding:20px;background:#ddd;">
+        <div class="docs-component__preview" style="padding:20px;background:#ddd;">
             <i class="iconset icon-heart" aria-hidden="true"></i>
             <i class="iconset icon-close" aria-hidden="true"></i>
             <i class="iconset icon-checked" aria-hidden="true"></i>
@@ -37,7 +34,7 @@
             <i class="iconset icon-chevron-right" aria-hidden="true"></i>
         </div>
 
-        <div class="component-code language-markup"><script type="text/plain">
+        <div class="docs-component__code language-markup"><script type="text/plain">
             <i class="iconset icon-heart" aria-hidden="true"></i>
             <i class="iconset icon-close" aria-hidden="true"></i>
             <i class="iconset icon-checked" aria-hidden="true"></i>
@@ -53,8 +50,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
