--- a/html/index.html
+++ b/html/index.html
@@ -5,44 +5,44 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>title</title>
+    <title>UI Component</title>
 
     <meta name="description" content="...">
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/css/frame.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
     <script src="../assets/js/vendor/html5shiv-printshiv.min.js"></script>
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="cpframe">
-    <div class="cpframe-wrapper">
-        <header class="cpframe-header">
-            <h1 class="cpframe-logo"><a href="index.html">UI Component</a></h1>
+<body class="docs docs-layout-frame">
+    <div class="docs-frame">
+        <header class="docs-frame__header">
+            <h1 class="docs-frame__logo"><a href="index.html">UI Component</a></h1>
         </header>
 
-        <aside class="cpframe-aside">
-            <nav class="cpframe-menu">
+        <aside class="docs-frame__aside">
+            <nav class="docs-frame__menu">
                 <ul>
-                    <li class="active"><a href="../html/icon.html">icon</a></li>
-                    <li><a href="../html/button.html">button</a></li>
-                    <li><a href="../html/input.html">input</a></li>
-                    <li><a href="../html/list.html">list</a></li>
-                    <li><a href="../html/tab.html">tab</a></li>
-                    <li><a href="../html/table.html">table</a></li>
-                    <li><a href="../html/pagination.html">pagination</a></li>
-                    <li><a href="../html/breadcrumb.html">breadcrumb</a></li>
-                    <li><a href="../html/modal.html">modal</a></li>
+                    <li class="docs-frame__menu__item is-active"><a href="../html/icon.html">icon</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/button.html">button</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/input.html">input</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/list.html">list</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/tab.html">tab</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/table.html">table</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/pagination.html">pagination</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/breadcrumb.html">breadcrumb</a></li>
+                    <li class="docs-frame__menu__item"><a href="../html/modal.html">modal</a></li>
                 </ul>
             </nav>
         </aside>
 
-        <div class="cpframe-container">
-            <div class="cpframe-content">
-                <iframe src="../html/_default.html" frameborder="0" class="cpframe-viewer"></iframe>
+        <div class="docs-frame__container">
+            <div class="docs-frame__content">
+                <iframe src="../html/_default.html" frameborder="0" class="docs-frame__viewer"></iframe>
             </div>
         </div>
     </div>
@@ -51,8 +51,9 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="../frame_assets/js/plugins.js"></script>
-    <script src="../frame_assets/js/script.js"></script>
+    <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="../assets/js/plugins.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/docs.js"></script>
 </body>
 </html>
