--- a/html/pagination.html
+++ b/html/pagination.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,52 +18,52 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component__wrapper">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">pagination</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">pagination</h1>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="pagination">
                     <ul>
-                        <li class="first"><a href="javascript:void(0);"><span>first</span></a></li>
-                        <li class="prev"><a href="javascript:void(0);"><span>prev</span></a></li>
-                        <li><a href="javascript:void(0);"><span>1</span></a></li>
-                        <li><a href="javascript:void(0);"><span>2</span></a></li>
-                        <li><a href="javascript:void(0);"><span>3</span></a></li>
-                        <li><a href="javascript:void(0);"><span>4</span></a></li>
-                        <li class="active"><a href="javascript:void(0);"><span>5</span></a></li>
-                        <li><a href="javascript:void(0);"><span>6</span></a></li>
-                        <li><a href="javascript:void(0);"><span>7</span></a></li>
-                        <li><a href="javascript:void(0);"><span>8</span></a></li>
-                        <li><a href="javascript:void(0);"><span>9</span></a></li>
-                        <li><a href="javascript:void(0);"><span>10</span></a></li>
-                        <li class="next"><a href="javascript:void(0);"><span>next</span></a></li>
-                        <li class="last"><a href="javascript:void(0);"><span>last</span></a></li>
+                        <li class="pagination__item pagination__item-first"><a href="javascript:void(0);"><span>first</span></a></li>
+                        <li class="pagination__item pagination__item-prev"><a href="javascript:void(0);"><span>prev</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>1</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>2</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>3</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>4</span></a></li>
+                        <li class="pagination__item is-active"><a href="javascript:void(0);"><span>5</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>6</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>7</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>8</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>9</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>10</span></a></li>
+                        <li class="pagination__item pagination__item-next"><a href="javascript:void(0);"><span>next</span></a></li>
+                        <li class="pagination__item pagination__item-last"><a href="javascript:void(0);"><span>last</span></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                  <div class="pagination">
                     <ul>
-                        <li class="first"><a href="javascript:void(0);"><span>first</span></a></li>
-                        <li class="prev"><a href="javascript:void(0);"><span>prev</span></a></li>
-                        <li><a href="javascript:void(0);"><span>1</span></a></li>
-                        <li><a href="javascript:void(0);"><span>2</span></a></li>
-                        <li><a href="javascript:void(0);"><span>3</span></a></li>
-                        <li><a href="javascript:void(0);"><span>4</span></a></li>
-                        <li class="active"><a href="javascript:void(0);"><span>5</span></a></li>
-                        <li><a href="javascript:void(0);"><span>6</span></a></li>
-                        <li><a href="javascript:void(0);"><span>7</span></a></li>
-                        <li><a href="javascript:void(0);"><span>8</span></a></li>
-                        <li><a href="javascript:void(0);"><span>9</span></a></li>
-                        <li><a href="javascript:void(0);"><span>10</span></a></li>
-                        <li class="next"><a href="javascript:void(0);"><span>next</span></a></li>
-                        <li class="last"><a href="javascript:void(0);"><span>last</span></a></li>
+                        <li class="pagination__item pagination__item-first"><a href="javascript:void(0);"><span>first</span></a></li>
+                        <li class="pagination__item pagination__item-prev"><a href="javascript:void(0);"><span>prev</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>1</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>2</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>3</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>4</span></a></li>
+                        <li class="pagination__item is-active"><a href="javascript:void(0);"><span>5</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>6</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>7</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>8</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>9</span></a></li>
+                        <li class="pagination__item"><a href="javascript:void(0);"><span>10</span></a></li>
+                        <li class="pagination__item pagination__item-next"><a href="javascript:void(0);"><span>next</span></a></li>
+                        <li class="pagination__item pagination__item-last"><a href="javascript:void(0);"><span>last</span></a></li>
                     </ul>
                 </div>
             </script></div>
@@ -79,8 +76,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
