--- a/html/tab.html
+++ b/html/tab.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,36 +18,36 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component__wrapper">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">tab</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">tab</h1>
 
-        <h2 class="component-title">tablist</h2>
+        <h2 class="docs-component__title">tablist</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>TeneturTeneturTeneturTeneturTeneturTeneturTeneturTenetur.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Quas.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Sequi!</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>TeneturTeneturTeneturTeneturTeneturTeneturTeneturTenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Quas.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Sequi!</span></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <div class="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Quas.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Sequi!</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Quas.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Sequi!</span></a></li>
                     </ul>
                 </div>
             </script></div>
@@ -58,22 +55,22 @@
 
 
 
-        <h2 class="component-title">tablist.inline</h2>
+        <h2 class="docs-component__title">tablist.inline</h2>
 
-            <div class="component-preview">
-                <div class="tablist inline">
+            <div class="docs-component__preview">
+                <div class="tablist tablist-inline">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Quas.</span></a></li>
-                        <li><a href="javascript:void(0);"><span>Sequi!</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Quas.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);"><span>Sequi!</span></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                <div class="tablist inline">
+            <div class="docs-component__code language-markup"><script type="text/plain">
+                <div class="tablist tablist-inline">
                     ...
                 </div>
             </script></div>
@@ -81,20 +78,20 @@
 
 
 
-        <h2 class="component-title">tablist + tabpanel</h2>
+        <h2 class="docs-component__title">tablist + tabpanel</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="tablist" role="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);" id="tab00-01" role="tab" aria-controls="tabpanel00-01"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab00-02" role="tab" aria-controls="tabpanel00-02"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab00-03" role="tab" aria-controls="tabpanel00-03"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab00-04" role="tab" aria-controls="tabpanel00-04"><span>Quas.</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab00-01" role="tab" aria-controls="tabpanel00-01"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab00-02" role="tab" aria-controls="tabpanel00-02"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab00-03" role="tab" aria-controls="tabpanel00-03"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab00-04" role="tab" aria-controls="tabpanel00-04"><span>Quas.</span></a></li>
                     </ul>
                 </div>
 
                 <div class="tabcontent">
-                    <div class="tabpanel active" id="tabpanel00-01" role="tabpanel" aria-labelledby="tab00-01">
+                    <div class="tabpanel is-active" id="tabpanel00-01" role="tabpanel" aria-labelledby="tab00-01">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid omnis repudiandae dolores, consectetur blanditiis, provident eos natus esse doloremque debitis officiis minima vel nisi assumenda nostrum ipsum explicabo sed modi porro, velit enim! Ratione, vitae voluptate. Voluptatibus laboriosam perspiciatis voluptas aperiam, expedita cupiditate at, reiciendis beatae atque quia, similique numquam veniam natus delectus molestias asperiores, iure quo. Laudantium repellendus a eaque officia quibusdam temporibus dolorem vero itaque amet sapiente natus optio adipisci, consequatur dolor culpa! Fuga necessitatibus quae iusto vitae ut cum quos, ipsa ab distinctio saepe reiciendis ratione eligendi eum mollitia enim labore. Nihil, sunt exercitationem accusantium iure nesciunt.
                     </div>
                     <div class="tabpanel" id="tabpanel00-02" role="tabpanel" aria-labelledby="tab00-02">
@@ -109,18 +106,18 @@
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <div class="tablist" role="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);" id="tab00-01" role="tab" aria-controls="tabpanel00-01"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab00-02" role="tab" aria-controls="tabpanel00-02"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab00-03" role="tab" aria-controls="tabpanel00-03"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab00-04" role="tab" aria-controls="tabpanel00-04"><span>Quas.</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab00-01" role="tab" aria-controls="tabpanel00-01"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab00-02" role="tab" aria-controls="tabpanel00-02"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab00-03" role="tab" aria-controls="tabpanel00-03"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab00-04" role="tab" aria-controls="tabpanel00-04"><span>Quas.</span></a></li>
                     </ul>
                 </div>
 
                 <div class="tabcontent">
-                    <div class="tabpanel active" id="tabpanel00-01" role="tabpanel" aria-labelledby="tab00-01">...</div>
+                    <div class="tabpanel is-active" id="tabpanel00-01" role="tabpanel" aria-labelledby="tab00-01">...</div>
                     <div class="tabpanel" id="tabpanel00-02" role="tabpanel" aria-labelledby="tab00-02">...</div>
                     <div class="tabpanel" id="tabpanel00-03" role="tabpanel" aria-labelledby="tab00-03">...</div>
                     <div class="tabpanel" id="tabpanel00-04" role="tabpanel" aria-labelledby="tab00-04">...</div>
@@ -130,44 +127,44 @@
 
 
 
-        <h2 class="component-title">script</h2>
+        <h2 class="docs-component__title">script</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="tablist" role="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);" id="tab01-01" role="tab" data-ui-tab="tab"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab01-03" role="tab" data-ui-tab="tab"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab01-04" role="tab" data-ui-tab="tab"><span>Quas.</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab01-01" role="tab" data-ui-tab="tab"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-03" role="tab" data-ui-tab="tab"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-04" role="tab" data-ui-tab="tab"><span>Quas.</span></a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <div class="tablist" role="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);" id="tab01-01" role="tab" data-ui-tab="tab"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab01-03" role="tab" data-ui-tab="tab"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab01-04" role="tab" data-ui-tab="tab"><span>Quas.</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab01-01" role="tab" data-ui-tab="tab"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-02" role="tab" data-ui-tab="tab"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-03" role="tab" data-ui-tab="tab"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab01-04" role="tab" data-ui-tab="tab"><span>Quas.</span></a></li>
                     </ul>
                 </div>
             </script></div>
 
 
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="tablist" role="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);" id="tab02-01" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-01"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab02-02" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-02"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab02-03" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-03"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab02-04" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-04"><span>Quas.</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab02-01" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-01"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab02-02" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-02"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab02-03" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-03"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab02-04" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-04"><span>Quas.</span></a></li>
                     </ul>
                 </div>
 
                 <div class="tabcontent">
-                    <div class="tabpanel active" id="tabpanel02-01" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-01">
+                    <div class="tabpanel is-active" id="tabpanel02-01" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-01">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid omnis repudiandae dolores, consectetur blanditiis, provident eos natus esse doloremque debitis officiis minima vel nisi assumenda nostrum ipsum explicabo sed modi porro, velit enim! Ratione, vitae voluptate. Voluptatibus laboriosam perspiciatis voluptas aperiam, expedita cupiditate at, reiciendis beatae atque quia, similique numquam veniam natus delectus molestias asperiores, iure quo. Laudantium repellendus a eaque officia quibusdam temporibus dolorem vero itaque amet sapiente natus optio adipisci, consequatur dolor culpa! Fuga necessitatibus quae iusto vitae ut cum quos, ipsa ab distinctio saepe reiciendis ratione eligendi eum mollitia enim labore. Nihil, sunt exercitationem accusantium iure nesciunt.
                     </div>
                     <div class="tabpanel" id="tabpanel02-02" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-02">
@@ -184,18 +181,18 @@
                 <button class="tab02-eq3">tab02-03 open</button>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <div class="tablist" role="tablist">
                     <ul>
-                        <li class="active"><a href="javascript:void(0);" id="tab02-01" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-01"><span>Lorem.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab02-02" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-02"><span>Nostrum.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab02-03" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-03"><span>Tenetur.</span></a></li>
-                        <li><a href="javascript:void(0);" id="tab02-04" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-04"><span>Quas.</span></a></li>
+                        <li class="tablist__item is-active"><a href="javascript:void(0);" id="tab02-01" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-01"><span>Lorem.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab02-02" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-02"><span>Nostrum.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab02-03" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-03"><span>Tenetur.</span></a></li>
+                        <li class="tablist__item"><a href="javascript:void(0);" id="tab02-04" data-ui-tab="tab" role="tab" aria-controls="tabpanel02-04"><span>Quas.</span></a></li>
                     </ul>
                 </div>
 
                 <div class="tabcontent">
-                    <div class="tabpanel active" id="tabpanel02-01" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-01">...</div>
+                    <div class="tabpanel is-active" id="tabpanel02-01" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-01">...</div>
                     <div class="tabpanel" id="tabpanel02-02" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-02">...</div>
                     <div class="tabpanel" id="tabpanel02-03" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-03">...</div>
                     <div class="tabpanel" id="tabpanel02-04" data-ui-tab="panel" role="tabpanel" aria-labelledby="tab02-04">...</div>
@@ -210,8 +207,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
