--- a/html/table.html
+++ b/html/table.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,17 +18,17 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component__wrapper">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">table</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">table</h1>
 
-        <h2 class="component-title">table tags</h2>
+        <h2 class="docs-component__title">table tags</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="table">
                     <table>
                         <thead>
@@ -66,7 +63,7 @@
                 </div>
             </div>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="table">
                     <table>
                         <tbody>
@@ -93,7 +90,7 @@
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                 <div class="table">
                     <table>
                         <thead>
@@ -113,10 +110,10 @@
 
 
 
-        <h2 class="component-title">table bordered</h2>
+        <h2 class="docs-component__title">table bordered</h2>
 
-            <div class="component-preview">
-                <div class="table bordered">
+            <div class="docs-component__preview">
+                <div class="table table-bordered">
                     <table>
                         <thead>
                             <tr>
@@ -150,8 +147,8 @@
                 </div>
             </div>
 
-            <div class="component-preview">
-                <div class="table bordered">
+            <div class="docs-component__preview">
+                <div class="table table-bordered">
                     <table>
                         <tbody>
                             <tr>
@@ -177,8 +174,8 @@
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                 <div class="table bordered">
+            <div class="docs-component__code language-markup"><script type="text/plain">
+                 <div class="table table-bordered">
                      table...
                  </div>
             </script></div>
@@ -186,10 +183,10 @@
 
 
 
-        <h2 class="component-title">table centered</h2>
+        <h2 class="docs-component__title">table centered</h2>
 
-            <div class="component-preview">
-                <div class="table centered">
+            <div class="docs-component__preview">
+                <div class="table table-centered">
                     <table>
                         <thead>
                             <tr>
@@ -223,8 +220,8 @@
                 </div>
             </div>
 
-            <div class="component-preview">
-                <div class="table centered">
+            <div class="docs-component__preview">
+                <div class="table table-centered">
                     <table>
                         <tbody>
                             <tr>
@@ -250,8 +247,8 @@
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                 <div class="table centered">
+            <div class="docs-component__code language-markup"><script type="text/plain">
+                 <div class="table table-centered">
                      table...
                  </div>
             </script></div>
@@ -264,8 +261,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
