--- a/html/breadcrumb.html
+++ b/html/breadcrumb.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,51 +18,55 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component__wrapper">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">breadcrumb</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">breadcrumb</h1>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="breadcrumb">
-                    <a href="javascript:void(0);">Home</a>
-                    <a href="javascript:void(0);">Lorem.</a>
-                    <a href="javascript:void(0);">Cumque.</a>
-                    <a href="javascript:void(0);">Minus.</a>
-                    <a href="javascript:void(0);">Cumque.</a>
+                    <a href="javascript:void(0);" class="breadcrumb__item">Home</a>
+                    <a href="javascript:void(0);" class="breadcrumb__item">Lorem.</a>
+                    <a href="javascript:void(0);" class="breadcrumb__item">Cumque.</a>
+                    <a href="javascript:void(0);" class="breadcrumb__item">Minus.</a>
+                    <a href="javascript:void(0);" class="breadcrumb__item">Cumque.</a>
                 </div>
             </div>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="breadcrumb">
-                    <span>Home</span>
-                    <span>Lorem.</span>
-                    <span>Cumque.</span>
-                    <span>Minus.</span>
-                    <span>Cumque.</span>
+                    <span class="breadcrumb__item">Home</span>
+                    <span class="breadcrumb__item">Lorem.</span>
+                    <span class="breadcrumb__item">Cumque.</span>
+                    <span class="breadcrumb__item">Minus.</span>
+                    <span class="breadcrumb__item">Cumque.</span>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                 <div class="breadcrumb">
-                    <a href="javascript:void(0);">Home</a>
-                    <a href="javascript:void(0);">Lorem.</a>
-                    <a href="javascript:void(0);">Cumque.</a>
-                    <a href="javascript:void(0);">Minus.</a>
-                    <a href="javascript:void(0);">Cumque.</a>
-                </div>
+            <div class="docs-component__code">
+                <div class="language-markup"><script type="text/plain">
+                    <div class="breadcrumb">
+                        <a href="javascript:void(0);" class="breadcrumb__item">Home</a>
+                        <a href="javascript:void(0);" class="breadcrumb__item">Lorem.</a>
+                        <a href="javascript:void(0);" class="breadcrumb__item">Cumque.</a>
+                        <a href="javascript:void(0);" class="breadcrumb__item">Minus.</a>
+                        <a href="javascript:void(0);" class="breadcrumb__item">Cumque.</a>
+                    </div>
+                </script></div>
 
-                <div class="breadcrumb">
-                    <span>Home</span>
-                    <span>Lorem.</span>
-                    <span>Cumque.</span>
-                    <span>Minus.</span>
-                    <span>Cumque.</span>
-                </div>
-            </script></div>
+                <div class="language-markup"><script type="text/plain">
+                    <div class="breadcrumb">
+                        <span class="breadcrumb__item">Home</span>
+                        <span class="breadcrumb__item">Lorem.</span>
+                        <span class="breadcrumb__item">Cumque.</span>
+                        <span class="breadcrumb__item">Minus.</span>
+                        <span class="breadcrumb__item">Cumque.</span>
+                    </div>
+                </script></div>
+            </div>
     </section>
 
 
@@ -75,8 +76,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
