--- a/html/list.html
+++ b/html/list.html
@@ -11,9 +11,6 @@
     <meta name="keyword" content="...">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../frame_assets/prism/prism.css">
-    <link rel="stylesheet" href="../frame_assets/css/style.css">
-
     <link rel="stylesheet" href="../assets/css/style.css">
 
     <!--[if lte IE 8]>
@@ -21,32 +18,32 @@
     <script src="../assets/js/vendor/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-<div class="component-wrapper">
-<div class="component-container">
+<body class="docs">
+<div class="docs-component__wrapper">
+<div class="docs-component__container">
 
 
-    <section class="component-section">
-        <h1 class="component-title">list</h1>
+    <section class="docs-component__section">
+        <h1 class="docs-component__title">list</h1>
 
-        <h2 class="component-title">list default</h2>
+        <h2 class="docs-component__title">list default</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="list">
                     <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, voluptatem!</li>
-                        <li>Adipisci error ullam illo minus dolorum assumenda. Itaque, iste, placeat.</li>
-                        <li>Maiores quod tenetur at, sed, natus sit doloribus laboriosam? Itaque.</li>
-                        <li>Aperiam natus quibusdam hic autem voluptates nobis suscipit tenetur eius!</li>
-                        <li>Repellat laudantium quisquam, dolorem nobis hic ullam modi excepturi architecto.</li>
+                        <li class="list__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, voluptatem!</li>
+                        <li class="list__item">Adipisci error ullam illo minus dolorum assumenda. Itaque, iste, placeat.</li>
+                        <li class="list__item">Maiores quod tenetur at, sed, natus sit doloribus laboriosam? Itaque.</li>
+                        <li class="list__item">Aperiam natus    quibusdam hic autem voluptates nobis suscipit tenetur eius!</li>
+                        <li class="list__item">Repellat laudantium quisquam, dolorem nobis hic ullam modi excepturi architecto.</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                  <div class="list">
                     <ul>
-                        <li>...</li>
+                        <li class="list__item">...</li>
                     </ul>
                 </div>
             </script></div>
@@ -54,41 +51,41 @@
 
 
 
-        <h2 class="component-title">text-head + text-body</h2>
+        <h2 class="docs-component__title">text-head + text-body</h2>
 
-            <div class="component-preview">
+            <div class="docs-component__preview">
                 <div class="list">
                     <ul>
-                        <li>
-                            <span class="text-head">Lorem. : </span>
-                            <span class="text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, expedita!</span>
+                        <li class="list__item">
+                            <span class="list__item__head">Lorem. : </span>
+                            <span class="list__item__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, expedita!</span>
                         </li>
-                        <li>
-                            <span class="text-head">Sunt. : </span>
-                            <span class="text-body">Unde doloremque eius cum animi, enim est quam odit quas.</span>
+                        <li class="list__item">
+                            <span class="list__item__head">Sunt. : </span>
+                            <span class="list__item__body">Unde doloremque eius cum animi, enim est quam odit quas.</span>
                         </li>
-                        <li>
-                            <span class="text-head">Perferendis. : </span>
-                            <span class="text-body">Similique ipsam suscipit ipsum impedit laudantium <br>maiores minus praesentium quas!</span>
+                        <li class="list__item">
+                            <span class="list__item__head">Perferendis. : </span>
+                            <span class="list__item__body">Similique ipsam suscipit ipsum impedit laudantium <br>maiores minus praesentium quas!</span>
                         </li>
-                        <li>
-                            <span class="text-head">Nostrum. : </span>
-                            <span class="text-body">Perferendis laborum in, nulla ullam beatae tempora ducimus obcaecati, error.</span>
+                        <li class="list__item">
+                            <span class="list__item__head">Nostrum. : </span>
+                            <span class="list__item__body">Perferendis laborum in, nulla ullam beatae tempora ducimus obcaecati, error.</span>
                         </li>
-                        <li>
-                            <span class="text-head">Mollitia. : </span>
-                            <span class="text-body">Vero rerum quis vitae libero incidunt dolor sapiente reprehenderit magni.</span>
+                        <li class="list__item">
+                            <span class="list__item__head">Mollitia. : </span>
+                            <span class="list__item__body">Vero rerum quis vitae libero incidunt dolor sapiente reprehenderit magni.</span>
                         </li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
+            <div class="docs-component__code language-markup"><script type="text/plain">
                  <div class="list">
                     <ul>
-                        <li>
-                            <span class="text-head">...</span>
-                            <span class="text-body">...</span>
+                        <li class="list__item">
+                            <span class="list__item__head">...</span>
+                            <span class="list__item__body">...</span>
                         </li>
                     </ul>
                 </div>
@@ -97,24 +94,24 @@
 
 
 
-        <h2 class="component-title">not bullet</h2>
+        <h2 class="docs-component__title">not bullet</h2>
 
-            <div class="component-preview">
-                <div class="list none">
+            <div class="docs-component__preview">
+                <div class="list list-none">
                     <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, voluptatem!</li>
-                        <li>Adipisci error ullam illo minus dolorum assumenda. Itaque, iste, placeat.</li>
-                        <li>Maiores quod tenetur at, sed, natus sit doloribus laboriosam? Itaque.</li>
-                        <li>Aperiam natus quibusdam hic autem voluptates nobis suscipit tenetur eius!</li>
-                        <li>Repellat laudantium quisquam, dolorem nobis hic ullam modi excepturi architecto.</li>
+                        <li class="list__item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, voluptatem!</li>
+                        <li class="list__item">Adipisci error ullam illo minus dolorum assumenda. Itaque, iste, placeat.</li>
+                        <li class="list__item">Maiores quod tenetur at, sed, natus sit doloribus laboriosam? Itaque.</li>
+                        <li class="list__item">Aperiam natus quibusdam hic autem voluptates nobis suscipit tenetur eius!</li>
+                        <li class="list__item">Repellat laudantium quisquam, dolorem nobis hic ullam modi excepturi architecto.</li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                 <div class="list none">
+            <div class="docs-component__code language-markup"><script type="text/plain">
+                 <div class="list list-none">
                     <ul>
-                        <li>...</li>
+                        <li class="list__item">...</li>
                     </ul>
                 </div>
             </script></div>
@@ -122,26 +119,41 @@
 
 
 
-        <h2 class="component-title">numberic</h2>
+        <h2 class="docs-component__title">numberic</h2>
 
-            <div class="component-preview">
-                <div class="list numberic">
+            <div class="docs-component__preview">
+                <div class="list list-numberic">
                     <ul>
-                        <li><i class="text-num">1.</i> <span class="text-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, voluptatem!</span></li>
-                        <li><i class="text-num">2.</i> <span class="text-body">Adipisci error ullam illo minus dolorum assumenda. Itaque, iste, placeat.</span></li>
-                        <li><i class="text-num">3.</i> <span class="text-body">Maiores quod tenetur at, sed, natus sit <br>doloribus laboriosam? Itaque.</span></li>
-                        <li><i class="text-num">4.</i> <span class="text-body">Aperiam natus quibusdam hic autem voluptates nobis suscipit tenetur eius!</span></li>
-                        <li><i class="text-num">5.</i> <span class="text-body">Repellat laudantium quisquam, dolorem nobis hic ullam modi excepturi architecto.</span></li>
+                        <li class="list__item">
+                            <i class="list__item__num">1.</i>
+                            <span class="list__item__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, voluptatem!</span>
+                        </li>
+                        <li class="list__item">
+                            <i class="list__item__num">2.</i>
+                            <span class="list__item__body">Adipisci error ullam illo minus dolorum assumenda. Itaque, iste, placeat.</span>
+                        </li>
+                        <li class="list__item">
+                            <i class="list__item__num">3.</i>
+                            <span class="list__item__body">Maiores quod tenetur at, sed, natus sit <br>doloribus laboriosam? Itaque.</span>
+                        </li>
+                        <li class="list__item">
+                            <i class="list__item__num">4.</i>
+                            <span class="list__item__body">Aperiam natus quibusdam hic autem voluptates nobis suscipit tenetur eius!</span>
+                        </li>
+                        <li class="list__item">
+                            <i class="list__item__num">5.</i>
+                            <span class="list__item__body">Repellat laudantium quisquam, dolorem nobis hic ullam modi excepturi architecto.</span>
+                        </li>
                     </ul>
                 </div>
             </div>
 
-            <div class="component-code language-markup"><script type="text/plain">
-                 <div class="list numberic">
+            <div class="docs-component__code language-markup"><script type="text/plain">
+                 <div class="list list-numberic">
                     <ul>
-                        <li>
-                            <span class="text-num">...</span>
-                            <span class="text-body">...</span>
+                        <li class="list__item">
+                            <span class="list__item__num">...</span>
+                            <span class="list__item__body">...</span>
                         </li>
                     </ul>
                 </div>
@@ -155,8 +167,7 @@
     <!-- ========================================
          javascript
          ========================================= -->
-    <script src="../frame_assets/prism/prism.js"></script>
-
+    <script src="../assets/js/vendor/prism.js"></script>
     <script src="../assets/js/vendor/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/plugins.js"></script>
     <script src="../assets/js/script.js"></script>
