--- a/html/input.html
+++ b/html/input.html
@@ -111,22 +111,22 @@
             <div class="docs-component__preview">
                 <label class="input-check">
                     <input type="checkbox"><i aria-hidden="true"></i>
-                    <span class="input-check__text is-hidden">checkbox</span>
+                    <span class="input-check__text visuallyhidden">checkbox</span>
                 </label>
 
                 <label class="input-check">
                     <input type="checkbox" checked><i aria-hidden="true"></i>
-                    <span class="input-check__text is-hidden">checkbox</span>
+                    <span class="input-check__text visuallyhidden">checkbox</span>
                 </label>
 
                 <label class="input-check">
                     <input type="checkbox" disabled><i aria-hidden="true"></i>
-                    <span class="input-check__text is-hidden">disabled</span>
+                    <span class="input-check__text visuallyhidden">disabled</span>
                 </label>
 
                 <label class="input-check">
                     <input type="checkbox" checked disabled><i aria-hidden="true"></i>
-                    <span class="input-check__text is-hidden">disabled</span>
+                    <span class="input-check__text visuallyhidden">disabled</span>
                 </label>
             </div>
 
@@ -153,7 +153,7 @@
 
                 <label class="input-check">
                     <input type="checkbox"><i aria-hidden="true"></i>
-                    <span class="input-check__text is-hidden">checkbox visuallyhidden</span>
+                    <span class="input-check__text visuallyhidden">checkbox visuallyhidden</span>
                 </label>
             </script></div>
 
@@ -187,22 +187,22 @@
             <div class="docs-component__preview">
                 <label class="input-radio">
                     <input type="radio" name="tmp-radio"><i aria-hidden="true"></i>
-                    <span class="input-radio__text is-hidden">radio</span>
+                    <span class="input-radio__text visuallyhidden">radio</span>
                 </label>
 
                 <label class="input-radio">
                     <input type="radio" name="tmp-radio" checked><i aria-hidden="true"></i>
-                    <span class="input-radio__text is-hidden">radio</span>
+                    <span class="input-radio__text visuallyhidden">radio</span>
                 </label>
 
                 <label class="input-radio">
                     <input type="radio" name="tmp-radio2" disabled><i aria-hidden="true"></i>
-                    <span class="input-radio__text is-hidden">disabled</span>
+                    <span class="input-radio__text visuallyhidden">disabled</span>
                 </label>
 
                 <label class="input-radio">
                     <input type="radio" name="tmp-radio2" checked disabled><i aria-hidden="true"></i>
-                    <span class="input-radio__text is-hidden">disabled</span>
+                    <span class="input-radio__text visuallyhidden">disabled</span>
                 </label>
             </div>
 
@@ -229,7 +229,7 @@
 
                 <label class="input-radio">
                     <input type="radio" name="tmp-radio"><i aria-hidden="true"></i>
-                    <span class="input-radio__text is-hidden">radio visuallyhidden</span>
+                    <span class="input-radio__text visuallyhidden">radio visuallyhidden</span>
                 </label>
             </script></div>
 
